// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PropertyContactForm Snapshots should match snapshot in loading state 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      data-testid="input-name"
    >
      <label
        data-label-size="text-sm"
        for="name"
      >
        Name
      </label>
      <input
        data-has-errors="false"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="John Doe"
      />
    </div>
    <div
      data-testid="input-email"
    >
      <label
        data-label-size="text-sm"
        for="email"
      >
        Email
      </label>
      <input
        data-has-errors="false"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="john@example.com"
      />
    </div>
    <div
      data-testid="input-phone"
    >
      <label
        data-label-size="text-sm"
        for="phone"
      >
        Phone
      </label>
      <input
        data-has-errors="false"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      data-testid="input-body"
    >
      <label
        data-label-size="text-sm"
        for="body"
      >
        Message
      </label>
      <textarea
        data-has-errors="false"
        id="body"
        name="body"
        placeholder="Enter your message"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-not-allowed"
        disabled=""
        type="submit"
      >
        <span
          class="btn-pending-icon icon-spin"
          data-testid="refresh-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with default props 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      data-testid="input-name"
    >
      <label
        data-label-size="text-sm"
        for="name"
      >
        Name
      </label>
      <input
        data-has-errors="false"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="John Doe"
      />
    </div>
    <div
      data-testid="input-email"
    >
      <label
        data-label-size="text-sm"
        for="email"
      >
        Email
      </label>
      <input
        data-has-errors="false"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="john@example.com"
      />
    </div>
    <div
      data-testid="input-phone"
    >
      <label
        data-label-size="text-sm"
        for="phone"
      >
        Phone
      </label>
      <input
        data-has-errors="false"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      data-testid="input-body"
    >
      <label
        data-label-size="text-sm"
        for="body"
      >
        Message
      </label>
      <textarea
        data-has-errors="false"
        id="body"
        name="body"
        placeholder="Enter your message"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with different property data 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="custom-property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="custom-owner-456"
    />
    <div
      data-testid="input-name"
    >
      <label
        data-label-size="text-sm"
        for="name"
      >
        Name
      </label>
      <input
        data-has-errors="false"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="Jane Smith"
      />
    </div>
    <div
      data-testid="input-email"
    >
      <label
        data-label-size="text-sm"
        for="email"
      >
        Email
      </label>
      <input
        data-has-errors="false"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="jane@example.com"
      />
    </div>
    <div
      data-testid="input-phone"
    >
      <label
        data-label-size="text-sm"
        for="phone"
      >
        Phone
      </label>
      <input
        data-has-errors="false"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      data-testid="input-body"
    >
      <label
        data-label-size="text-sm"
        for="body"
      >
        Message
      </label>
      <textarea
        data-has-errors="false"
        id="body"
        name="body"
        placeholder="Enter your message"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with form errors 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      data-testid="input-name"
    >
      <label
        data-label-size="text-sm"
        for="name"
      >
        Name
      </label>
      <input
        data-has-errors="true"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="John Doe"
      />
    </div>
    <div
      data-testid="input-email"
    >
      <label
        data-label-size="text-sm"
        for="email"
      >
        Email
      </label>
      <input
        data-has-errors="true"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="john@example.com"
      />
    </div>
    <div
      data-testid="input-phone"
    >
      <label
        data-label-size="text-sm"
        for="phone"
      >
        Phone
      </label>
      <input
        data-has-errors="false"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      data-testid="input-body"
    >
      <label
        data-label-size="text-sm"
        for="body"
      >
        Message
      </label>
      <textarea
        data-has-errors="false"
        id="body"
        name="body"
        placeholder="Enter your message"
      />
    </div>
    <div
      data-testid="input-errors"
    >
      Form has errors
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with minimal user data 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      data-testid="input-name"
    >
      <label
        data-label-size="text-sm"
        for="name"
      >
        Name
      </label>
      <input
        data-has-errors="false"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value=""
      />
    </div>
    <div
      data-testid="input-email"
    >
      <label
        data-label-size="text-sm"
        for="email"
      >
        Email
      </label>
      <input
        data-has-errors="false"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value=""
      />
    </div>
    <div
      data-testid="input-phone"
    >
      <label
        data-label-size="text-sm"
        for="phone"
      >
        Phone
      </label>
      <input
        data-has-errors="false"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      data-testid="input-body"
    >
      <label
        data-label-size="text-sm"
        for="body"
      >
        Message
      </label>
      <textarea
        data-has-errors="false"
        id="body"
        name="body"
        placeholder="Enter your message"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;
